--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 class="display-1">Hello Bootstrap</h1>
+    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non voluptate veniam excepturi, ducimus aliquid rerum, quo ad nulla labore optio, corporis porro nihil iste! Vel magnam dicta nobis quas consectetur.</P>
 </body>
 </html>
