--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     <h1 class="display-1">Hello Bootstrap</h1>
-    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non voluptate veniam excepturi, ducimus aliquid rerum, quo ad nulla labore optio, corporis porro nihil iste! Vel magnam dicta nobis quas consectetur.</P>
+
+    <h1>button</h1>
+    <button class="btn btn-primary">primary</button>
+    <button class="btn btn-secondary">secondary</button>
+    <button class="btn btn-success">success</button>
+    <button class="btn btn-danger">danger</button>
+    <button class="btn btn-warning">warning</button>
+    <button class="btn btn-info">info</button>
+    <button class="btn btn-light">light</button>
+    <button class="btn btn-dark">dark</button>
+    <button class="btn btn-link">link</button>
+
+    <h1>color</h1>
+    <p class="text-primary">This is my first paragraph</p>
+    <p class="bg-danger text-white">he is most danger parson</p>
+    <p class="bg-success text-light">to be success is our dream</p>
+
+    <h1>image</h1>
+    <img src="images/shohag polli (4).JPG" alt="">
 </body>
 </html>
