--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <p class="bg-success text-light">to be success is our dream</p>
 
     <h1>image</h1>
-    <img src="images/shohag polli (4).JPG" alt="">
+    <img class="img-fluid img-thumbnail w-25 rounded-circle" src="images/ca bagan 3.jpg" alt="">
+    <img class="img-fluid w-25 rounded-5" src="images/shohag polli (4).JPG" alt="">
+    <img class="img-fluid w-25 rounded-pill" src="images/ratargul (2).jpg" alt="">
 </body>
 </html>
