--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap Practice</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -28,6 +28,55 @@
     <h1>image</h1>
     <img class="img-fluid img-thumbnail w-25 rounded-circle" src="images/ca bagan 3.jpg" alt="">
     <img class="img-fluid w-25 rounded-5" src="images/shohag polli (4).JPG" alt="">
-    <img class="img-fluid w-25 rounded-pill" src="images/ratargul (2).jpg" alt="">
+    <img class="img-fluid w-25 rounded-pill" src="images/ratargul (2).jpg" alt=""> 
+
+    <h1>card</h1>
+    <div class="card" style="width: 18rem;">
+        <img src="images/sada pathor (2).jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">sada pathor</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">get contrac</a>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/sada pathor (3).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">sada pathor</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatum tenetur, sapiente illo magni distinctio dolorem tempora sit veritatis doloribus repellat natus excepturi error? Dolorem voluptate nobis sit nemo dolorum.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/ratargul (1).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">ratargul</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/ca bagan (2).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">ca bagan</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-body-secondary">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
