--- a/index.html
+++ b/index.html
@@ -120,6 +120,26 @@
           </div>
         </div>
       </div>
+
+      
+      <div class="container">
+        <h1>Grid</h1>
+        <div class="row">
+          <div class="col-6">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci corrupti velit ab distinctio sit exercitationem eos a dicta aliquam. Distinctio, illo quasi! Veniam illo illum unde accusamus ad autem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p>
+          </div>
+          <div class="col-6">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p>
+          </div>
+          <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+        </div>
+      </div>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
