--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Practice</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
       h1{
         margin-top: 100px;
@@ -125,19 +126,35 @@
       <div class="container">
         <h1>Grid</h1>
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/shohag polli (2).JPG" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci corrupti velit ab distinctio sit exercitationem eos a dicta aliquam. Distinctio, illo quasi! Veniam illo illum unde accusamus ad autem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/shohag polli (3).JPG" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p>
           </div>
-          <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
-          <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
-          <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
-          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
-          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
-          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
-          <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/shohag polli (4).JPG" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/porjoton kendro.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/sada pathor (1).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/sada pathor (2).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/sada pathor (3).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/ca bagan (2).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/ca bagan 3.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
         </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
