--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid navbar bg-primary" data-bs-theme="dark">
       <a class="navbar-brand" href="#"><img src="images/shohag polli (4).JPG" alt="Bootstrap" width="30" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,15 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Serveces</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Shipping</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -128,33 +137,39 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/shohag polli (2).JPG" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero adipisci corrupti velit ab distinctio sit exercitationem eos a dicta aliquam. Distinctio, illo quasi! Veniam illo illum unde accusamus ad autem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/shohag polli (3).JPG" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/shohag polli (4).JPG" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/porjoton kendro.jpg" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/sada pathor (1).jpg" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/sada pathor (2).jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
-          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
-            <img class="img-fluid" src="images/sada pathor (3).jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
-          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
-            <img class="img-fluid" src="images/ca bagan (2).jpg" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
             <img class="img-fluid" src="images/ca bagan 3.jpg" alt="">
+            <h4>heading 4</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-2">
+            <img class="img-fluid" src="images/ca bagan (2).jpg" alt="">
+            <h4>heading 4</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ab beatae sit accusantium repellat, reiciendis amet harum ipsa, neque laborum voluptas quos magnam nobis, excepturi vitae odit sapiente atque enim.</p></div>
+          
         </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
